syntax = "proto3";

package FKPasswordGrpc;

service PasswordService {
    rpc EncryptPassword (EncryptPasswordRequestBody) returns (EncryptPasswordResponseBody) {}
    rpc AuthenticatePassword (AuthenticatePasswordRequestBody) returns (AuthenticatePasswordResponseBody) {}
}

message EncryptPasswordRequestBody {
    int32 request_type = 1;
    string hashed_password = 2;
}

message EncryptPasswordResponseBody {
    int32 status_code = 1;
    string message = 2;
    int32 request_type = 3;
    string encrypted_password = 4;
    string salt = 5;
}

message AuthenticatePasswordRequestBody {
	int32 request_type = 1;
    string hashed_password = 2;
    string encrypted_password = 3;
}

message AuthenticatePasswordResponseBody {
    int32 status_code = 1;
    string message = 2;
	int32 request_type = 3;
}